--- a/index7.html
+++ b/index7.html
@@ -9,7 +9,7 @@
 	ПРЯТКИ
 В начале игры все собираются вместе, затем водящий, встав лицом к стене, громко считает до 100 (или другого числа). Иногда десятками до 100 или 200. Другие в это время прячутся. Досчитав до нужного числа, водящий идёт искать спрятавшихся. Иногда перед этим полагается сказать «раз-два-три-четыре-пять, я иду [всех вас] искать», «пора-не пора, иду со двора» или «кто не спрятался, я не виноват(а)». Увидев спрятавшегося, он должен первым добежать до места, откуда он начал поиски, и коснуться рукой стены, произнеся условленные слова, отличающиеся в разных регионах («чека́», «палочка-выручалочка», «палы-выры», «тра-та-та», «кулы-кулы», «туки-руки», «туки-туки за себя», «бан-барабан за себя», «стук-стук за себя», «стуки-та», «туки-та», «пали-стукали», «стукали-пали я», «туки-баки», «тюли-я», «стук палочки я»
 <div class="addimg">
-	<img src="https://github.com/crystalpoison1/KadkinDA/blob/39512efdebfd4283798bfbd4d27d01eb9f6198f9/%D0%9F%D1%80%D0%AF%D1%82%D0%9A%D0%B8.jpg">
+	<img src="images/ДоГоНяЛкИ.jpg"/>
 </div>
 
 ДОГОНЯЛКИ
