--- a/index7.html
+++ b/index7.html
@@ -9,7 +9,7 @@
 	ПРЯТКИ
 В начале игры все собираются вместе, затем водящий, встав лицом к стене, громко считает до 100 (или другого числа). Иногда десятками до 100 или 200. Другие в это время прячутся. Досчитав до нужного числа, водящий идёт искать спрятавшихся. Иногда перед этим полагается сказать «раз-два-три-четыре-пять, я иду [всех вас] искать», «пора-не пора, иду со двора» или «кто не спрятался, я не виноват(а)». Увидев спрятавшегося, он должен первым добежать до места, откуда он начал поиски, и коснуться рукой стены, произнеся условленные слова, отличающиеся в разных регионах («чека́», «палочка-выручалочка», «палы-выры», «тра-та-та», «кулы-кулы», «туки-руки», «туки-туки за себя», «бан-барабан за себя», «стук-стук за себя», «стуки-та», «туки-та», «пали-стукали», «стукали-пали я», «туки-баки», «тюли-я», «стук палочки я»
 <div class="addimg">
-	<img src="KadkinDA/images/4b3dea4571aad53707c78dfe8bb1b04c55954562/%D0%94%D0%BE%D0%93%D0%BE%D0%9D%D1%8F%D0%9B%D0%BA%D0%98.jpg"/>
+	<img src="KadkinDA/images/4b3dea4571aad53707c78dfe8bb1b04c55954562/%D0%94%D0%BE%D0%93%D0%BE%D0%9D%D1%8F%D0%9B%D0%BA%D0%98.jpg">
 </div>
 
 ДОГОНЯЛКИ
