--- a/index7.html
+++ b/index7.html
@@ -18,7 +18,7 @@
 <div class="addimg">
 	<img src="https://github.com/crystalpoison1/KadkinDA/blob/39512efdebfd4283798bfbd4d27d01eb9f6198f9/%D0%94%D0%BE%D0%93%D0%BE%D0%9D%D1%8F%D0%9B%D0%BA%D0%98.jpg">
 </div>
-ЦАРЯ ГОРЫ
+ЦАРЬ ГОРЫ
 Царь горы — детская народная игра на открытом воздухе, задача игрока в которой — занимать вершину горы или любую другую определённую правилами игры возвышенность (отсюда и название) и не пускать туда остальных игроков. Как потенциально травмоопасная, игра часто запрещена в современных школах. В царя горы с местной спецификой играют в разных странах, преимущественно дети, иногда взрослые. Игра является весьма древней и, поскольку она практикуется всеми цивилизациями включая островные народы, по всей вероятности существует с первобытных времён.
 <div class="addimg">
 	<img src="https://github.com/crystalpoison1/KadkinDA/blob/39512efdebfd4283798bfbd4d27d01eb9f6198f9/%D1%86%D0%B0%D1%80%D1%8C%20%D0%B3%D0%BE%D1%80%D1%8B.jpg">
